@@ -43,7 +43,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${argLine} --enable-preview</argLine>
+                    <argLine>${argLine} --enable-preview --add-modules=jdk.incubator.concurrent</argLine>
                 </configuration>
             </plugin>
             <plugin>
